[gd_scene load_steps=6 format=3 uid="uid://670u5fd6o2or"]

[ext_resource type="PackedScene" uid="uid://cwivyhuhqxi1p" path="res://scenes/weapons/gun.tscn" id="1_nns2o"]
[ext_resource type="Texture2D" uid="uid://ccpjje3b8duvv" path="res://sprites/weapons/submachine_gun_top.png" id="2_8c116"]
[ext_resource type="Script" path="res://scenes/weapons/submachineGun/submachine_gun.gd" id="2_tdi2n"]
[ext_resource type="PackedScene" uid="uid://dyvsg6agovpti" path="res://scenes/environment/particles/gun_shot_particle.tscn" id="4_ikon3"]
[ext_resource type="AudioStream" uid="uid://cwbfxlcby2ie3" path="res://assets/sounds/guns/8014__xenonn__layered-gunshots/128296__xenonn__layered-gunshot-0.wav" id="4_wsqsk"]

[node name="submachineGun" instance=ExtResource("1_nns2o")]
script = ExtResource("2_tdi2n")
FIRE_RATE = 0.16

[node name="gunSprite" parent="gunPivot" index="0"]
position = Vector2(8.88728, 0)
texture = ExtResource("2_8c116")

[node name="shootPoint" parent="gunPivot/gunSprite" index="0"]
position = Vector2(6.43334, -0.515001)

[node name="GunShotParticle" parent="gunPivot/gunSprite/shootPoint" index="0" instance=ExtResource("4_ikon3")]
position = Vector2(-0.253332, 0.171667)
scale = Vector2(1.35212, 1.35212)

[node name="shootTimer" type="Timer" parent="." index="4"]
unique_name_in_owner = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource("4_wsqsk")
volume_db = -20.0

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
